--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <div id="quest-answ" class="question-answer">
       <p id="question"></p>
+      <input type="text" id="input-answer"/>
       <button id="check-question"> Check </button>
       <button id="next-question"> Pasapalabra</button>
     </div>
