change logic and create circle

--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <button id="start-game">START GAME</button>
+    <div id="description-start">
+      <div id="description">
+        <h4>Bienvenidos al juego de PASAPALABRA</h4>
+        <p>
+          Basado en el exitoso concurso de televisión Pasapalabra de Telecinco, las normas son muy sencillas:
+        </p>
+        <p>
+          Se mostraran unas definiciones por pantalla y el usuario deberá responder con la palabra a la que corresponden.
+          El usuario tiene la opción de decir Pasapalabra y dejar esa definición para mas adelante.
+        </p>
+        <p>
+          Recuerde tener en cuenta las tildes al escribir las palabras, si no se le contarán como error.
+        </p>
+
+        <button id="start-game">start game</button>
+      </div>
+    </div>
 
     <div id="show-board" class="s-board">
-      <!--  <div id="question">
-          <span></span>
-          <input id="answer" />
-        </div>
-        <button id="check-question"> Check </button>
-        <button id="next-question"> Pasapalabra</button> -->
     </div>
 
     <div id="quest-answ" class="question-answer">
