final version pre-code checking

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           Recuerde tener en cuenta las tildes al escribir las palabras, si no se le contarán como error.
         </p>
 
-        <button id="start-game" class="btn">start game</button>
+        <button id="start-game" class="btn start-game">start game</button>
 
 
 
@@ -38,7 +38,7 @@
 
     <div id="end-game" class="finish-game">
       <p>¡Fin de la partida!</p>
-      <button id="start-game" class="btn">start game</button>
+      <p>¡Has acertado <span id ="correct-answers"></span>!</p>
     </div>
 
 
