--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div id="end-game" class="finish-game">
-      <p>¡Fin de la partida!</p>
+      <h2>¡Fin de la partida!</h2>
       <p>¡Has acertado <span id ="correct-answers"></span>!</p>
     </div>
 
